[package]
name = "backend"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
actix-web = "4.6.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
    "mysql",
    "runtime-actix-rustls",
    "chrono",
] }
dotenv = "0.15"
rand = "0.8"
thiserror = "1.0"
env_logger = "0.11.5"
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
futures-util = "0.3.30"
log = "0.4.22"
actix-files = "0.6.6"
moka = { version = "0.12.8", features = ["future"] }
fast_image_resize = { version = "4.2.1", features = ["image"] }
image = { version = "0.25.2", features = ["png"] }
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["rt", "macros", "net"] }

[build-dependencies]
syn = "1"

[dev-dependencies]
actix-rt = "2.10.0"
